# colab

./: README.md  food101.py  mnist.py  pyproject.toml
tests/: test_colab2.py
