[tool.poetry]
name = "colab"
version = "0.1.0"
description = ""
authors = ["kitfactory <kitfactory@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
tftk = "^0.1.4"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
